<resources>
    <string name="app_name">MyCalculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="del">DEL</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="MPlus">M+</string>
    <string name="MMinus">M-</string>
    <string name="MR">MR</string>
    <string name="MC">MC</string>
    <string name="Clear">C</string>
    <string name="history">Hist</string>
    <string name="back">Back</string>
</resources>
